[gd_scene load_steps=3 format=2]

[ext_resource path="res://SurveyManager.gd" type="Script" id=1]
[ext_resource path="res://ShowSurvey.gd" type="Script" id=2]

[node name="ShowSurvey" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SurveyManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 463.0
margin_top = 139.0
margin_right = 561.0
margin_bottom = 461.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 98.0
margin_bottom = 20.0
text = "Get Question"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 98.0
margin_bottom = 48.0
custom_constants/separation = 24

[node name="Prompt" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 98.0
margin_bottom = 66.0
text = "Loading..."
align = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 98.0
margin_bottom = 94.0
custom_constants/separation = 24

[node name="ItemList" type="ItemList" parent="CenterContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 98.0
margin_bottom = 322.0
rect_min_size = Vector2( 0, 224 )
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="no_questions_available" from="SurveyManager" to="." method="_on_no_questions_available"]
[connection signal="player_loaded" from="SurveyManager" to="." method="_on_player_loaded"]
[connection signal="question_received" from="SurveyManager" to="." method="_on_question_received"]
[connection signal="response_saved" from="SurveyManager" to="." method="_on_response_saved"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/ItemList" to="." method="_on_item_selected"]
